opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/coq-opam-website"
dev-repo: "git+https://github.com/clarus/coq-opam-website.git"
bug-reports: "https://github.com/clarus/coq-opam-website/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
  ["sh" "-c" "cd extraction && make"]
]
install: [
  ["install" "-T" "extraction/opamWebsite.native" "%{bin}%/opamWebsite"]
]
depends: [
  "coq-io" {>= "4.0.0" build}
  "coq-io-system" {build}
  "coq-list-string" {>= "2.1.0" build}
  "coq-io-system-ocaml" {>= "2.3.0"}
]
tags: [
  "keyword:effects"
  "keyword:extraction"
]
synopsis: "Generation of a Coq website for opam: http://coq.io/opam/ "
